Limit number of packages in the pipeline at a point of time.

If a large number of packages is added, they are queued to avoid
running out of memory.

As there is no backtrace and no good setup to reproduce, feel free
to reopen if the bug still occurs.

BUG: 269373