utilities/facedetection/facepipeline_p.h
@@ -346,6 +346,8 @@ public:
     void sendFromFilter(const QList<FacePipelineExtendedPackage::Ptr>& packages);
     void skipFromFilter(const QList<ImageInfo>& infosForSkipping);
     void send(FacePipelineExtendedPackage::Ptr package);
+    bool senderFlowControl(FacePipelineExtendedPackage::Ptr package);
+    void receiverFlowControl();
     FacePipelineExtendedPackage::Ptr buildPackage(const ImageInfo& info);
     FacePipelineExtendedPackage::Ptr buildPackage(const ImageInfo& info,
                                                   const FacePipelineDatabaseFace&, const DImg& image);
@@ -379,6 +381,9 @@ public:
     bool                 started;
     int                  infosForFiltering;
     int                  packagesOnTheRoad;
+    int                  maxPackagesOnTheRoad;
+
+    QList<FacePipelineExtendedPackage::Ptr> delayedPackages;
 
 public Q_SLOTS:
 
